// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2024";

package mdi.privatearatea;

import "src/com/google/android/as/oss/privateinference/api/anonymous_token_request.proto";

import
"java/com/google/android/as/oss/privateinference/api/device_attestation_request.proto";

import "third_party/oak/proto/session/session.proto";

option java_outer_classname = "PrivateArateaServiceOuterClass";
option java_package = "com.google.search.mdi.privatearatea.proto";

service PrivateArateaService {
  // Starts a Noise session by performing remote attestation, and a secure
  // handshake. <http://www.noiseprotocol.org/noise.html>
  //
  // After a secure session is established, the client and server exchange a
  // stream of encrypted messages.
  rpc StartNoiseSession(stream oak.session.v1.SessionRequest)
      returns (stream oak.session.v1.SessionResponse) {
    option deadline = 600.0;
  }
}

// An open-sourced, binary-compatible subset of the PrivateArateaRequest
// message, containing only the request types needed from within PCS.
  message PcsPrivateArateaRequest {
  oneof request {
    // This is the only request type that we use directly in pcs.
    DeviceAttestationRequest device_attestation_request =
        6
        ;

    AnonymousTokenRequest anonymous_token_request =
        8
        ;
  }
}
